--- a/SportsTech.Web/SportsTech.Web.csproj
+++ b/SportsTech.Web/SportsTech.Web.csproj
@@ -197,10 +197,15 @@
     <Compile Include="App_Start\RegisterDatatablesModelBinder.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Areas\Events\Controllers\ActivityController.cs" />
+    <Compile Include="Areas\Events\Controllers\DashboardController.cs" />
+    <Compile Include="Areas\Events\EventsAreaRegistration.cs" />
+    <Compile Include="Areas\Events\ViewModels\Activity\PersonViewModel.cs" />
+    <Compile Include="Areas\Events\ViewModels\Activity\ListItemViewModel.cs" />
+    <Compile Include="Areas\Events\ViewModels\Dashboard\DashboardViewModel.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
-    <Compile Include="Controllers\EventController.cs" />
-    <Compile Include="Controllers\EventDashboardController.cs" />
+    <Compile Include="Areas\Events\Controllers\EventController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\HttpAjaxAttribute.cs" />
     <Compile Include="Filters\HttpAjaxRedirectFilter.cs" />
@@ -215,12 +220,11 @@
     <Compile Include="MoreLinq\MoreEnumerable.TakeLast.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\Event\CreateViewModel.cs" />
-    <Compile Include="ViewModels\EventDashboard\DashboardViewModel.cs" />
-    <Compile Include="ViewModels\Event\EditTeamViewModel.cs" />
-    <Compile Include="ViewModels\Event\EditViewModel.cs" />
-    <Compile Include="ViewModels\EventDashboard\EventActivityListViewModel.cs" />
-    <Compile Include="ViewModels\Event\ListViewModel.cs" />
+    <Compile Include="Areas\Events\ViewModels\Event\CreateViewModel.cs" />
+    <Compile Include="Areas\Events\ViewModels\Event\EditTeamViewModel.cs" />
+    <Compile Include="Areas\Events\ViewModels\Event\EditViewModel.cs" />
+    <Compile Include="Areas\Events\ViewModels\Activity\ListViewModel.cs" />
+    <Compile Include="Areas\Events\ViewModels\Event\ListViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -297,6 +301,10 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Areas\Events\Views\web.config" />
+    <Content Include="Areas\Events\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Events\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Events\Views\Activity\_List.cshtml" />
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
     <Content Include="Scripts\bootstrap.datatables.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -347,18 +355,19 @@
     <Content Include="Views\Shared\_SiteFooter.cshtml" />
     <Content Include="Views\Shared\_SiteHeader.cshtml" />
     <Content Include="Views\Dashboard\Index.cshtml" />
-    <Content Include="Views\Event\List.cshtml" />
-    <Content Include="Views\Event\Create.cshtml" />
-    <Content Include="Views\Event\_EventForm.cshtml" />
-    <Content Include="Views\Event\Dashboard.cshtml" />
+    <Content Include="Areas\Events\Views\Event\List.cshtml" />
+    <Content Include="Areas\Events\Views\Event\Create.cshtml" />
+    <Content Include="Areas\Events\Views\Event\_EventForm.cshtml" />
+    <Content Include="Areas\Events\Views\Event\Dashboard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Events\Models\" />
+    <Folder Include="Areas\Events\Views\Dashboard\" />
     <Folder Include="Library\" />
     <Folder Include="ViewModels\Dashboard\" />
     <Folder Include="ViewModels\Home\" />
     <Folder Include="ViewModels\Shared\" />
-    <Folder Include="Views\EventDashboard\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
