--- a/SportsTech.Web/SportsTech.Web.csproj
+++ b/SportsTech.Web/SportsTech.Web.csproj
@@ -200,9 +200,12 @@
     <Compile Include="Areas\Events\Controllers\ActivityController.cs" />
     <Compile Include="Areas\Events\Controllers\DashboardController.cs" />
     <Compile Include="Areas\Events\EventsAreaRegistration.cs" />
+    <Compile Include="Areas\Events\ViewModels\Activity\ActivityEventViewModel.cs" />
+    <Compile Include="Areas\Events\ViewModels\Activity\AvailableViewModel.cs" />
     <Compile Include="Areas\Events\ViewModels\Activity\PersonViewModel.cs" />
     <Compile Include="Areas\Events\ViewModels\Activity\ListItemViewModel.cs" />
     <Compile Include="Areas\Events\ViewModels\Dashboard\DashboardViewModel.cs" />
+    <Compile Include="Areas\Events\ViewModels\Dashboard\TeamViewModel.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Areas\Events\Controllers\EventController.cs" />
@@ -306,6 +309,11 @@
     <Content Include="Areas\Events\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Events\Views\Activity\_List.cshtml" />
     <Content Include="Areas\Events\Views\Dashboard\View.cshtml" />
+    <Content Include="Areas\Events\Views\Dashboard\Team.cshtml" />
+    <Content Include="Areas\Events\Views\Activity\_SystemDefined.cshtml" />
+    <Content Include="Areas\Events\Views\Activity\_Stoppages.cshtml" />
+    <Content Include="Areas\Events\Views\Activity\_Available.cshtml" />
+    <Content Include="Areas\Events\Views\Activity\_ActivityEvents.cshtml" />
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
     <Content Include="Scripts\bootstrap.datatables.js" />
     <Content Include="Scripts\bootstrap.js" />
