--- a/SportsTech.Web/SportsTech.Web.csproj
+++ b/SportsTech.Web/SportsTech.Web.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Areas\Events\Controllers\EventController.cs" />
+    <Compile Include="Controllers\DialogController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\HttpAjaxAttribute.cs" />
     <Compile Include="Filters\HttpAjaxRedirectFilter.cs" />
@@ -228,6 +229,7 @@
     <Compile Include="Areas\Events\ViewModels\Event\EditViewModel.cs" />
     <Compile Include="Areas\Events\ViewModels\Activity\ListViewModel.cs" />
     <Compile Include="Areas\Events\ViewModels\Event\ListViewModel.cs" />
+    <Compile Include="ViewModels\Shared\DeleteDialogViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -314,6 +316,7 @@
     <Content Include="Areas\Events\Views\Activity\_Stoppages.cshtml" />
     <Content Include="Areas\Events\Views\Activity\_Available.cshtml" />
     <Content Include="Areas\Events\Views\Activity\_ActivityEvents.cshtml" />
+    <Content Include="Areas\Events\Views\Event\Edit.cshtml" />
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
     <Content Include="Scripts\bootstrap.datatables.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -367,6 +370,7 @@
     <Content Include="Areas\Events\Views\Event\List.cshtml" />
     <Content Include="Areas\Events\Views\Event\Create.cshtml" />
     <Content Include="Areas\Events\Views\Event\_EventForm.cshtml" />
+    <Content Include="Views\Dialog\_DeleteDialog.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -374,7 +378,6 @@
     <Folder Include="Library\" />
     <Folder Include="ViewModels\Dashboard\" />
     <Folder Include="ViewModels\Home\" />
-    <Folder Include="ViewModels\Shared\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
