--- a/SportsTech.Domain.Tests/SportsTech.Domain.Tests.csproj
+++ b/SportsTech.Domain.Tests/SportsTech.Domain.Tests.csproj
@@ -47,6 +47,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Data.Entity.Design" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -67,6 +68,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SportsTech.Data.Entity\SportsTech.Data.Entity.csproj">
+      <Project>{3bd5daa7-a98e-4052-bcf1-1725b1680e6a}</Project>
+      <Name>SportsTech.Data.Entity</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SportsTech.DataModel\SportsTech.Data.csproj">
       <Project>{c8b873c9-705a-4829-910f-6e20ed8a07cc}</Project>
       <Name>SportsTech.Data</Name>
