--- a/SportsTech.Data.Entity/SportsTech.Data.Entity.csproj
+++ b/SportsTech.Data.Entity/SportsTech.Data.Entity.csproj
@@ -55,6 +55,10 @@
     <Compile Include="Migrations\201312300155504_Initial.Designer.cs">
       <DependentUpon>201312300155504_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201312300214519_Opposition.cs" />
+    <Compile Include="Migrations\201312300214519_Opposition.Designer.cs">
+      <DependentUpon>201312300214519_Opposition.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitOfWork.cs" />
@@ -72,6 +76,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201312300155504_Initial.resx">
       <DependentUpon>201312300155504_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201312300214519_Opposition.resx">
+      <DependentUpon>201312300214519_Opposition.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
