--- a/SportsTech.DataModel/SportsTech.Data.csproj
+++ b/SportsTech.DataModel/SportsTech.Data.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Model\Teamsheet.cs" />
     <Compile Include="Model\UserProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Role.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
