--- a/SportsTech.Web/packages.config
+++ b/SportsTech.Web/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="Autofac" version="3.3.0" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.1.0" targetFramework="net45" />
+  <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
   <package id="bootstrap" version="3.0.3" targetFramework="net45" />
   <package id="DataTables-ASP.NET-MVC" version="4.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.2" targetFramework="net45" />
