Attempted to push ApplicationUser to the Entity level project however this is causing a registration error which I have posted for help with on SO

--- a/SportsTech.DomainModel/SportsTech.Domain.csproj
+++ b/SportsTech.DomainModel/SportsTech.Domain.csproj
@@ -47,7 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Services\Core\ClubService.cs" />
     <Compile Include="Services\Core\EventService.cs" />
+    <Compile Include="Services\IClubService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="Services\IEventService.cs" />
     <Compile Include="Services\IService.cs" />
