--- a/SportsTech.Domain.Tests/SportsTech.Domain.Tests.csproj
+++ b/SportsTech.Domain.Tests/SportsTech.Domain.Tests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Services\Core\EventServiceTest.cs" />
     <Compile Include="MockFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Core\ClubServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SportsTech.Data.Entity\SportsTech.Data.Entity.csproj">
