--- a/SportsTech.Web/SportsTech.Web.csproj
+++ b/SportsTech.Web/SportsTech.Web.csproj
@@ -213,9 +213,11 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\Clubs\ClubsAreaRegistration.cs" />
     <Compile Include="Areas\Clubs\Controllers\ClubController.cs" />
+    <Compile Include="Areas\Clubs\Controllers\CompetitionController.cs" />
     <Compile Include="Areas\Clubs\Controllers\TeamController.cs" />
     <Compile Include="Areas\Clubs\Models\ClubAuthorizeAttribute.cs" />
     <Compile Include="Areas\Clubs\ViewModels\Club\CreateViewModel.cs" />
+    <Compile Include="Areas\Clubs\ViewModels\Competition\CreateViewModel.cs" />
     <Compile Include="Areas\Clubs\ViewModels\Team\CreateViewModel.cs" />
     <Compile Include="Areas\Events\Controllers\ActivityController.cs" />
     <Compile Include="Areas\Events\Controllers\DashboardController.cs" />
@@ -353,6 +355,10 @@
     <Content Include="Areas\Clubs\Views\Team\Create.cshtml" />
     <Content Include="Areas\Clubs\Views\Team\_TeamForm.cshtml" />
     <Content Include="Areas\Clubs\Views\Team\Edit.cshtml" />
+    <Content Include="Areas\Clubs\Views\Competition\List.cshtml" />
+    <Content Include="Areas\Clubs\Views\Competition\Create.cshtml" />
+    <Content Include="Areas\Clubs\Views\Competition\_CompetitionForm.cshtml" />
+    <Content Include="Areas\Clubs\Views\Competition\Edit.cshtml" />
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
     <Content Include="Scripts\bootstrap.datatables.js" />
     <Content Include="Scripts\bootstrap.js" />
