--- a/SportsTech.Data.Entity/SportsTech.Data.Entity.csproj
+++ b/SportsTech.Data.Entity/SportsTech.Data.Entity.csproj
@@ -62,6 +62,10 @@
     <Compile Include="Migrations\201401030517161_Initial.Designer.cs">
       <DependentUpon>201401030517161_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201401060819234_Competition.cs" />
+    <Compile Include="Migrations\201401060819234_Competition.Designer.cs">
+      <DependentUpon>201401060819234_Competition.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitOfWork.cs" />
@@ -79,6 +83,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201401030517161_Initial.resx">
       <DependentUpon>201401030517161_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201401060819234_Competition.resx">
+      <DependentUpon>201401060819234_Competition.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
