--- a/SportsTech.Web/packages.config
+++ b/SportsTech.Web/packages.config
@@ -5,6 +5,7 @@
   <package id="Autofac.Mvc5" version="3.1.0" targetFramework="net45" />
   <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
   <package id="bootstrap" version="3.0.3" targetFramework="net45" />
+  <package id="Bootstrap.DateTimePicker" version="0.0.11" targetFramework="net45" />
   <package id="DataTables-ASP.NET-MVC" version="4.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.2" targetFramework="net45" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net45" />
@@ -41,5 +42,6 @@
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.3.0" targetFramework="net45" />
+  <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
