--- a/SportsTech.Data.Entity/SportsTech.Data.Entity.csproj
+++ b/SportsTech.Data.Entity/SportsTech.Data.Entity.csproj
@@ -37,6 +37,9 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.0.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="LinqKit">
+      <HintPath>..\packages\LinqKit.1.0\lib\35\LinqKit.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.1.0.0\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
     </Reference>
@@ -66,6 +69,10 @@
     <Compile Include="Migrations\201401060819234_Competition.Designer.cs">
       <DependentUpon>201401060819234_Competition.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201401120610325_CompetitionRegistrationLink.cs" />
+    <Compile Include="Migrations\201401120610325_CompetitionRegistrationLink.Designer.cs">
+      <DependentUpon>201401120610325_CompetitionRegistrationLink.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitOfWork.cs" />
@@ -86,6 +93,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201401060819234_Competition.resx">
       <DependentUpon>201401060819234_Competition.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201401120610325_CompetitionRegistrationLink.resx">
+      <DependentUpon>201401120610325_CompetitionRegistrationLink.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
